--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,12 @@
     <title>My_Form_God_Damn_It</title>
   </head>
   <body>
+
+    <div>
+        TU BENDZIE MAPA
+    </div>
+
+
     <div class="container d-flex h-100">
       <div class="row justify-content-center">
         <div class="col-10">
