--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,19 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <title>My_Form_God_Damn_It</title>
+	<meta charset="utf-8">
+    <title>ModneKodyWprostZeSrody</title>
+	
+	  <style>
+      #map {
+        width: 90%;
+        height: 400px;
+      }
+    </style>
   </head>
   <body>
-    
-    <div>
-      <p> TU BENDZIE MAPA </p>
-    </div>
-
+	  <div id="map"></div>
+	  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <div class="container d-flex h-100">
       <div class="row justify-content-center">
         <div class="col-10">
