--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 	  <div id="map"></div>
-	  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.0.min.js"></script>
     <div class="container d-flex h-100">
       <div class="row justify-content-center">
         <div class="col-10">
