--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
     </style>
   </head>
   <body>
+
 	  <div id="map"></div>
-	  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.0.min.js"></script>
     <div class="container d-flex h-100">
       <div class="row justify-content-center">
         <div class="col-10">
@@ -26,5 +26,13 @@
         </div>
       </div>
     </div>
+    <label for="adres">Adres:</label>
+  <input type="text" id="adres">
+  <!-- <label for="nrdomu">Numer domu:</label> -->
+  <!-- <input type="text" id="nrdomu"><br> -->
+  <button type="button" id ="p1">Przeslij</button>
+  <button type="button" id ="p2">Wyczyść</button>
   </body>
+  <script src="  {% static 'js/jquery.js'       %}"></script>
+<script   src="  {% static 'js/rango-jquery.js' %}"></script>
 </html>
