--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,15 @@
   <!-- <input type="text" id="nrdomu"><br> -->
   <button type="button" id ="p1">Przeslij</button>
   <button type="button" id ="p2">Wyczyść</button>
+  <form class="form-inline">
+      <label>Geometry type &nbsp;</label>
+      <select id="type">
+        <option value="None">Brak</option>
+        <option value="Polygon">Polygon</option>
+        <option value="Circle">Koło</option>  
+    <!-- <option value="Point">Punkt</option>    -->
+      </select>
+    </form>
   </body>
   <script src="  {% static 'js/jquery.js'       %}"></script>
 <script   src="  {% static 'js/rango-jquery.js' %}"></script>
