--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
-<!doctype html>
-{% load static %}
 
+{% load static %}
+<!doctype html>
 <html lang="en">
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -14,7 +14,8 @@
     </style>
   </head>
   <body>
-
+<script src="  {% static 'jquery.js'       %}"></script>
+<script   src="  {% static 'rango-jquery.js' %}"></script>
 	  <div id="map"></div>
 
     <div class="container d-flex h-100">
@@ -43,8 +44,7 @@
     <!-- <option value="Point">Punkt</option>    -->
       </select>
     </form>
-    
+
   </body>
-  <script src="  {% static 'js/jquery.js'       %}"></script>
-<script   src="  {% static 'js/rango-jquery.js' %}"></script>
+  
 </html>
