--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+<!-- {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
 {% block main %}
@@ -7,4 +7,4 @@
     {{ form|crispy }}
     <button  type="submit"  class="btn btn-success">SEND</button>
 </form>
-{% endblock %}
+{% endblock %} -->
