--- a/templates/base.html
+++ b/templates/base.html
@@ -8,19 +8,36 @@
     <title>ModneKodyWprostZeSrody</title>
 	  
   </head>
-  
-  <body>
 
+  <body>
+      
       <link href="{% static 'css/leaflet.css' %}" type="text/css" media="screen" rel="stylesheet" />
       <link href="{% static 'css/osm_field.css' %}" type="text/css" media="screen" rel="stylesheet" />
       <script type="text/javascript" src="{% static 'js/leaflet.js' %}"></script>
       <script type="text/javascript" src="{% static 'js/osm_field.js' %}"></script>
-      <form action="" method="post">
+      {% block content %}
+      <style type="text/css">
+        div.osmfield-wrapper {
+          position:relative;
+        }
+
+        div.osmfield-map {
+          width: 350px;
+          height: 250px;
+          border: 1px solid black;
+          position: absolute;
+          left: 0;
+          top: 30px;
+          z-index: 1000;
+        }
+      </style>
+      {{ form.media }}
+      <form class= "post-form" action="" method="post">
       {% csrf_token %}
       {{ form.as_p }}
       <input type="submit" value="Save" />
       </form>
-
+      {% endblock %}
 
   </body>
   
