--- a/templates/my_custom_form/base.html
+++ b/templates/my_custom_form/base.html
@@ -9,22 +9,7 @@
 	  <link href="{% static 'css/leaflet.css' %}" type="text/css" media="screen" rel="stylesheet" />
     <link href="{% static 'css/osm_field.css' %}" type="text/css" media="screen" rel="stylesheet" />
     <script type="text/javascript" src="{% static 'js/leaflet.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/osm_field.js' %}"></script>
-    <style type="text/css">
-      div.osmfield-wrapper {
-        position:relative;
-      }
-
-      div.osmfield-map {
-        width: 350px;
-        height: 250px;
-        border: 1px solid black;
-        position: absolute;
-        left: 0;
-        top: 30px;
-        z-index: 1000;
-      }
-    </style>
+    <script type="text/javascript" src="{% static 'js/rango-jquery.js' %}"></script>
   </head>
 
   <body>
